--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build-prod": "ng build --prod --base-href cv",
-    "deploy-gh-pages": "deploy-to-gh-pages dist/cv/",
+    "deploy-gh-pages": "deploy-to-gh-pages --local dist/cv/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
